[package]
name = "ed25519_vs_bls_key_benchmarks"
version = "0.1.0"
authors = ["Ian Coleman <ian@iancoleman.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.0"
rand = "0.7.3"
sha2 = { version = "0.9", default-features = false }
threshold_crypto = "0.4.0"
tiny-keccak = { version = "2.0.1", features = ["sha3"] }
time = "0.1"
